--- a/pipelines.yml
+++ b/pipelines.yml
@@ -20,7 +20,7 @@ pipelines:
             - echo "executing task command 1"
             - echo "executing task command 2"
           onSuccess:
-            - echo "Job well done!"
+            - echo "Job well done!!"
           onFailure:
             - echo "uh oh, something went wrong"
           onComplete: #always
