--- a/pipelines.yml
+++ b/pipelines.yml
@@ -12,10 +12,11 @@ pipelines:
         type: host
     steps:
       - name: robotapp_ci1
-        inputResources:
-          - name: robotapp_repo
-            trigger: true
         type: Bash
+        configuration:
+          inputResources:
+            - name: robotapp_repo
+              trigger: true
         execution:
           onStart:
             - echo "Preparing for work..."
