--- a/pipelines.yml
+++ b/pipelines.yml
@@ -15,6 +15,9 @@ pipelines:
           custom:
             name: conanio/gcc72
             tag: latest
+      inputResources:
+        - name: robotapp_repo
+          trigger: true
     steps:
       - name: Step1
         type: Bash
