--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-PROJECT(ServoApp)
+PROJECT(robotapp)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-if(WIRINGPI)
-    add_definitions(-DWIRINGPI)
-endif()
-
 message("LIBS: ${CONAN_LIBS}")
 
-ADD_EXECUTABLE(servoapp main.cpp)
-target_link_libraries(servoapp ${CONAN_LIBS})
+add_subdirectory(wrapper)
+add_subdirectory(app)
