created wrapper and use complete example

--- a/wrapper/CMakeLists.txt
+++ b/wrapper/CMakeLists.txt
@@ -1,5 +1,3 @@
-project(lib VERSION 0.1 LANGUAGES CXX)
-
 add_library(gopigo-wrapper src/gopigo-wrapper.cpp)
-target_include_directories(gopigo-wrapper PUBLIC include)
+target_include_directories(gopigo-wrapper PUBLIC src)
 target_link_libraries(gopigo-wrapper ${CONAN_LIBS})
