--- a/pipelines.yml
+++ b/pipelines.yml
@@ -2,8 +2,8 @@ resources:
   - name: robotapp_repo
     type: GitRepo
     configuration:
-      gitProvider: GitHub_danimtb
-      path: danimtb/robotapp
+      gitProvider: czoido_github
+      path: czoido/robotapp
       branches:
         include: master
 pipelines:
