--- a/pipelines.steps.yml
+++ b/pipelines.steps.yml
@@ -7,29 +7,42 @@ resources:
       branches:
         include: master
 pipelines:
-  - name: robotapp_ci
-    configuration:
-      runtime:
-        type: image
-        image:
-          custom:
-            name: conanio/gcc72
-            tag: latest
+  - name: barebones_pipeline
     steps:
-      - name: Trigger
-        type: Bash
-        configuration:
-          inputResources:
-            - name: robotapp_github
-              trigger: true
-        execution:
-          onExecute:
-            - echo "Triggered!!!"
-      - name: Step1
-        type: Bash
-        configuration:
-          inputSteps:
-            - name: Trigger
-        execution:
-          onExecute:
-            - echo "I'm running in container!!!"
+    - name: step_1
+      type: Bash
+      configuration:
+        inputResources:
+          - name: app
+      execution:
+        onExecute:
+          - printenv
+ 
+    - name: step_2
+      type: Bash
+      configuration:
+        inputSteps:
+          - name: step_1
+      execution:
+        onExecute:
+          - printenv
+ 
+    - name: step_3
+      type: Bash
+      configuration:
+        inputSteps:
+          - name: step_1
+      execution:
+        onExecute:
+          - printenv
+ 
+    - name: step_4
+      type: Bash
+      configuration:
+        inputSteps:
+          - name: step_2
+          - name: step_3
+        runtime:
+      execution:
+        onExecute:
+          - printenv
