--- a/pipelines.steps.yml
+++ b/pipelines.steps.yml
@@ -1,3 +1,11 @@
+resources:
+  - name: robotapp_github
+    type: GitRepo
+    configuration:
+      gitProvider: czoido_github
+      path: czoido/robotapp
+      branches:
+        include: master
 pipelines:
   - name: barebones_pipeline
     steps:
