hook changes on repo

--- a/pipelines.steps.yml
+++ b/pipelines.steps.yml
@@ -6,6 +6,12 @@ resources:
       path: czoido/robotapp
       branches:
         include: master
+      buildOn:
+         commit: true
+         pullRequestCreate: true
+         pullRequestClose: true
+         releaseCreate: true
+         tagCreate: true
 pipelines:
   - name: barebones_pipeline
     steps:
