--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(robotapp src/main.cpp)
-target_link_libraries(robotapp gopigo-wrapper)
+target_link_libraries(robotapp ${CONAN_LIBS})
