add line sensor to example

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(robotapp src/main.cpp)
+add_executable(robotapp src/main.cpp src/line_sensor.cpp)
 target_link_libraries(robotapp ${CONAN_LIBS})
