--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_executable(robotapp src/main.cpp src/line_sensor.cpp src/color_sensor.cpp)
+add_executable(robotapp 
+               src/main.cpp
+               src/line_sensor.cpp
+               src/color_sensor.cpp
+               src/server.cpp
+               src/MiniPID.cpp)
 target_link_libraries(robotapp ${CONAN_LIBS})
