--- a/pipelines.yml
+++ b/pipelines.yml
@@ -17,10 +17,11 @@ pipelines:
           onExecute:
             - printenv
             - echo $res_robotapp_github_commitSha
+
       - name: second_step_demo
         type: Bash
         configuration:
-          inputResources:
+          inputSteps:
             - name: first_step_demo
         execution:
           onExecute:
