--- a/pipelines.yml
+++ b/pipelines.yml
@@ -1,32 +1,39 @@
 resources:
-  - name: robotapp_github
+  - name: conan_robotapp_github
     type: GitRepo
     configuration:
       path: czoido/robotapp
       gitProvider: czoido_github
 
 pipelines:
-  - name: robotapp_pipeline
+  - name: robotapp
     steps:
-      - name: first_step_demo
-        type: DockerBuild
-        configuration:
-          dockerFileLocation: .
-          dockerFileName: Dockerfile
-          dockerImageName: conan_test_image
-          dockerImageTag: $run_number
-          inputResources:
-            - name: robotapp_github
-          integrations:
-            - name: czoido_docker
-
-      - name: second_step_demo
+      - name: build_robotapp_gcc8
         type: Bash
         configuration:
-          inputSteps:
-            - name: first_step_demo
+          runtime:
+            type: image
+            image:
+              custom:
+                name: czoido/pipelines-conanio-gcc8-armv7hf
+                tag: latest
+          inputResources:
+            - name: conan_robotapp_github
+          integrations:
+            - name: czoido_docker
+            - name: environment
         execution:
           onExecute:
-            - printenv
-            - echo $res_robotapp_github_commitSha          
-
+            - export CONAN_LOGIN_USERNAME=$int_environment_CONAN_LOGIN_USERNAME
+            - export CONAN_PASSWORD=$int_environment_CONAN_PASSWORD
+            - pip install conan --upgrade
+            - pip install conan_package_tools
+            - conan user
+            - git clone https://github.com/czoido/robotapp.git
+            - cd robotapp
+            - conan profile new default --detect
+            - conan profile show default
+            - conan profile update settings.compiler.libcxx=libstdc++11 default
+            - conan profile update settings.compiler.version=8 default
+            - export CONAN_GCC_VERSIONS=8
+            - python build.py
