use local profile

--- a/pipelines.yml
+++ b/pipelines.yml
@@ -28,13 +28,13 @@ pipelines:
             - export CONAN_LOGIN_USERNAME=$int_environment_CONAN_LOGIN_USERNAME
             - export CONAN_PASSWORD=$int_environment_CONAN_PASSWORD
             - pip install conan --upgrade
-            - pip install conan_package_tools
             - conan user
-            - conan profile new default --detect
-            - conan profile update settings.compiler.libcxx=libstdc++11 default
-            - conan profile update settings.compiler.version=8 default
+            - cd $res_conan_robotapp_github2_resourcePath
+            - conan profile new ./default --detect
+            - conan profile update settings.compiler.libcxx=libstdc++11 ./default
+            - conan profile update settings.compiler.version=8 ./default
             - export CONAN_GCC_VERSIONS=8
-            - conan profile show default
+            - conan profile show ./default
       - name: create_app
         type: Bash
         configuration:
@@ -54,6 +54,6 @@ pipelines:
             - name: environment
         execution:
           onExecute:
-            - conan profile show default
+            - conan profile show ./default
             - cd $res_conan_robotapp_github2_resourcePath
-            - conan create .
+            - conan create . --profile ./default
