--- a/pipelines.yml
+++ b/pipelines.yml
@@ -58,7 +58,7 @@ pipelines:
             - restore_run_files conan_user_home ~/.conan
             - cd $res_conan_robotapp_github2_resourcePath
             - conan profile show default
-            - conan create . user/channel --profile default
+            - conan create . --profile default
             - add_run_files ~/.conan conan_user_home
       - name: upload_app
         type: Bash
@@ -75,4 +75,4 @@ pipelines:
         execution:
           onExecute:
             - restore_run_files conan_user_home ~/.conan
-            - conan upload robotapp/1.0@user/channel --all
+            - conan upload --all --confirm *
