refactor  a little bit

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(robotapp
                src/main.cpp
                src/line_sensor.cpp
                src/color_sensor.cpp
-               src/server.cpp
-               src/MiniPID.cpp)
+               src/mini_pid.cpp
+               src/ws_client.cpp)
+               
 target_link_libraries(robotapp ${CONAN_LIBS})
