upload only app

--- a/pipelines.yml
+++ b/pipelines.yml
@@ -53,4 +53,4 @@ pipelines:
         execution:
           onExecute:
             - restore_run_files conan_user_home2 ~/.conan
-            - conan upload --all --confirm "*"
+            - conan upload --all --confirm "robotapp*"
