--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,7 +3,9 @@ add_executable(robotapp
                src/line_sensor.cpp
                src/color_sensor.cpp
                src/mini_pid.cpp
-               src/ws_client.cpp)
+               src/ws_client.cpp
+               src/param_reader.cpp
+               src/robot_car.cpp)
 
 target_compile_options(robotapp PUBLIC -w)               
 target_link_libraries(robotapp ${CONAN_LIBS})
